--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -9,5 +9,15 @@ html
 			.container-fluid
 				.navbar-header
 					a#navTitle.navbar-brand(href='index.html')
+		.container-fluid
+			table.table
+				thead
+					tr
+						td Description
+						td Amount
+						td Value
+						td Action
+				tbody#listTable
+					
 		script(type='text/javascript', src='js/config.js')
 		script(type='text/javascript', src='js/main.js')
