--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -4,6 +4,7 @@ html
 		meta(http-equiv="content-type", content="text/html; charset=UTF-8")
 		title Advancing Javascript - School of Net
 		link(rel="stylesheet", type="text/css", href="style/bootstrap.min.css")
+		link(rel="stylesheet", type="text/css", href="style/main.css")
 	body
 		nav.navbar.navbar-default
 			.container-fluid
@@ -17,7 +18,10 @@ html
 					input#amount.form-control(type='text', placeholder='Amount')
 				.form-group
 					input#value.form-control(type='text', placeholder='Value')
-				button.btn.btn-default(onclick='addData();') Add
+				span#btnUpdate
+					button.btn.btn-default(onclick='UpdateData();') Save
+					button.btn.btn-default(onclick='resetForm();') Cancel
+				button#btnAdd.btn.btn-default(onclick='addData();') Add
 			table.table
 				thead
 					tr
