--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -19,6 +19,7 @@ html
 				.form-group
 					input#value.form-control(type='text', placeholder='Value')
 				span#btnUpdate
+					span#inputIDUpdate
 					button.btn.btn-default(onclick='UpdateData();') Save
 					button.btn.btn-default(onclick='resetForm();') Cancel
 				button#btnAdd.btn.btn-default(onclick='addData();') Add
