--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -23,6 +23,7 @@ html
 					button.btn.btn-default(onclick='UpdateData();') Save
 					button.btn.btn-default(onclick='resetForm();') Cancel
 				button#btnAdd.btn.btn-default(onclick='addData();') Add
+			#errors
 			table.table
 				thead
 					tr
