--- a/dev/stylus/main.styl
+++ b/dev/stylus/main.styl
@@ -1,2 +1,12 @@
 #btnUpdate
+#errors
 	display none
+#errors
+	background-color rgba(255,0,0, .4)
+	border 1px solid #f00
+	border-radius 12px
+	color #fff
+	margin 10px
+	padding 10px
+	h3
+		margin 0 0 10px
