--- a/dev/pug/index.pug
+++ b/dev/pug/index.pug
@@ -32,6 +32,11 @@ html
 						td Value
 						td Action
 				tbody#listTable
+		nav.navbar.navbar-default.navbar-fixed-bottom
+			.container
+				h4.text-center.text-success
+					| Total: 
+					span#totalValue $0,00
 					
 		script(type='text/javascript', src='js/config.js')
 		script(type='text/javascript', src='js/main.js')
